<resources>
    <string name="app_name">Assignment 1</string>
    <string name="minus_btn">-</string>
    <string name="plus_btn">+</string>
    <string name="howMany_tv">1</string>
    <string name="question_tv">How many people?</string>
    <string name="next_btn">Next</string>
    <string name="startDate_btn">PICK</string>
    <string name="startDate_tv">Please pick a date</string>
    <string name="start_lbl">Start Date:</string>
    <string name="end_lbl">End Date:</string>
    <string name="endDate_tv">Please pick a date</string>
    <string name="endDate_btn">PICK</string>
    <string name="adult_lbl">Adult</string>
    <string name="children_lbl">Children</string>
    <string name="from_label">From:</string>
    <string name="to_lbl">To:</string>
    <string name="next2_btn">Next</string>
    <string name="dash">-</string>
    <string name="select_location">Select Location</string>
    <string name="minutes">%02d minutes</string>
    <string name="depart_lbl">Departure Date</string>
    <string name="people_amount_lbl">Select amount of people going on trip</string>
    <string name="car">Car</string>
    <string name="travel_type_lbl">Select Travel Type</string>
    <string name="plane">Plane</string>
    <string name="bus">Bus</string>
    <string name="walking">Walking</string>
    <string name="main_activity">Input Travel Information</string>
    <string name="location_activity">List of Locations</string>
    <string name="kilometers">%.2f kms</string>
    <string name="cost">$%.2f</string>
    <string name="resetButton">reset</string>
    <string name="output_activity">Trip Summary</string>
    <string name="btnLoad">Load saved trips</string>
    <string name="btnCreate">New trip</string>
    <string name="tvWelcome">Welcome to Trip Planner</string>
    <string name="btnBack">BACK</string>
    <string name="btnDelete">DELETE</string>
    <string name="txtTrip">Trip to be deleted</string>
    <string name="btnSave">SAVE</string>
    <string name="btnShop">SHOP ON AMAZON.CA</string>
    <string name="load">Load</string>
    <string name="tripListItem1">%02d - %s</string>
    <string name="mapTripMarker">Do you want <b>%s</b> to the trip?</string>

    <string name="startServiceBtn">Start Service</string>
    <string name="stopServiveBtn">Stop Service</string>

    <string name="edit_name">Edit Name</string>
    <string name="edit_description">Edit Description</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="trip_details">Trip Details</string>
    <string name="edit_details">Edit Details</string>
    <string name="appwidget_description">Display a trip on your homescreen</string>
    <string name="location">Location</string>
    <string name="no_results">No Results</string>
    <string name="no_trip">Trip %d no longer exists</string>
    <string name="configure">Configure</string>
    <string name="loading_locations">Loading Locations...</string>
    <string name="channel_name">Trip Planner</string>
    <string name="channel_description">A channel for notifications for the Trip Planner</string>

</resources>