<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WelcomeFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvWelcome"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>


        <Button
            android:id="@+id/btnLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLoad"
            android:onClick="startService"

            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="31dp"
            android:layout_marginBottom="20dp"/>


        <Button
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCreate"

            tools:layout_editor_absoluteX="0dp"
            android:layout_marginBottom="20dp"/>


        <Button
            android:id="@+id/startServiceBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="startService"
            android:text="@string/startServiceBtn" />

        <Button
            android:id="@+id/stopServiceBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="stopService"
            android:text="@string/stopServiveBtn" />


    </LinearLayout>

</layout>