<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".trip.NewTripFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="75dp">

            <GridLayout
                android:columnCount="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:text="@string/people_amount_lbl"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnSurface"
                    android:padding="5dp"/>

                <include android:id="@+id/adult_count" layout="@layout/people_count"
                    android:layout_column="0" android:layout_height="wrap_content" android:layout_width="0dp" android:layout_columnWeight="1"/>

                <include android:id="@+id/children_count" layout="@layout/people_count"
                    android:layout_column="1" android:layout_height="wrap_content" android:layout_width="0dp" android:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/adult_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:text="@string/adult_lbl"
                    android:textColor="#0E0E0E"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:text="@string/children_lbl"
                    android:textColor="#0E0E0E"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </GridLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <GridLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="4"
                    android:text="@string/travel_type_lbl"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnSurface"/>

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="@string/plane"
                    android:onClick="onCheckboxClicked"/>

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:text="@string/car"/>

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:text="@string/bus"/>

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_row="1"
                    android:layout_column="3"
                    android:text="@string/walking"/>

            </GridLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/depart_lbl"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnSurface"/>

                <include android:id="@+id/startDatePicker" layout="@layout/date_picker" android:layout_height="match_parent" android:layout_width="match_parent" android:layout_columnWeight="1"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <GridLayout
                android:columnCount="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp">

                <Spinner
                    android:id="@+id/fromLocation_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="6"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:prompt="@string/select_location"
                    android:minHeight="48dp"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/toLocation_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="7"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:prompt="@string/select_location"
                    android:minHeight="48dp"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/from_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="6"
                    android:layout_column="0"
                    android:layout_columnWeight="0.1"

                    android:layout_gravity="center"
                    android:text="@string/from_label"
                    android:textColor="#0E0E0E"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/to_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="7"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:text="@string/to_lbl"
                    android:textColor="#0E0E0E"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </GridLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next_btn"
            android:textColor="#F1EAEA"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnBack"
            android:textColor="#F1EAEA"
            android:textSize="28sp"
            android:textStyle="bold" />


    </LinearLayout>

</layout>