<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground"
    android:theme="@style/Theme.Assignment1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_toEndOf="@id/btn_edit"
            android:layout_toStartOf="@id/btn_refresh"
            android:text="@string/name"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_name"
            android:layout_toEndOf="@id/btn_edit"
            android:layout_toStartOf="@id/btn_refresh"
            android:text="@string/description"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            android:textAlignment="center"
            android:gravity="center"
            android:lines="2"
            android:ellipsize="end"/>

        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_edit_note_24"
            style="@style/ImageButton.Refresh"/>

        <ImageButton
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/baseline_refresh_24"
            style="@style/ImageButton.Refresh"/>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/list_trip_points"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/widget_trip_point_item"/>

        <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/no_results"
            android:textAlignment="center"
            android:gravity="center"
            android:visibility="gone"/>

    </FrameLayout>

</LinearLayout>